# rinha-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build_index  README.md  docker-compose.yml  info.json  nginx.conf
.github/workflows/: build.yml
scripts/: make-submission.sh
src/: index.rs  ivf.rs  main.rs  parser.rs  server.rs  vectorizer.rs
