[package]
name = "solution-x"
version = "0.1.0"
edition = "2021"

[dependencies]
wide = "0.7"
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rayon = "1"
mimalloc = { version = "0.1", default-features = false }
memchr = "2"

[target.'cfg(target_os = "linux")'.dependencies]
glommio = "0.9"
futures-lite = "2"

[[bin]]
name = "solution-x"
path = "src/main.rs"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
